1.5-3.5 (SVN revision 1563)
* Dialer: add and use new column to record timestamp of Originate execution for
  call. This is needed for upcoming support for outgoing monitoring 
  information. 
* Reports Break: rewrite introduced a regression in date select that prevented
  data from being fetched if the start and end date are the same. Fixed. Should
  fix Elastix bug #360.
* Dialer: fix accessing of undefined Uniqueid variable in OnDial event.
* Agent Console: recognize call attributes that are HTTP URLs, and display them
  as hyperlinks.
* Dialer: merge fix to prevent stale pidfile that happens to match an active 
  process from making the daemon hang on startup. See Elastix bug #356. 
* Agent Console: add interface for scheduling of calls to particular agents. 
  This support requires a specific context to work properly.

1.5-3.4
* Installer: The ALTER TABLE embedded in the middle of the SQL script to create
  the database will not work for creating the complete database in the clean
  install case. The script stops processing on the first error, so the remainder
  of the tables are not created. Embedding the creation in a stored procedure
  works in Elastix 2.0 but not in Elastix 1.6 due to Elastix bug #71. This makes
  it necessary to duplicate the schema check and update in PHP code.

1.5-3.3
* Clients: implement download of existing contact information.
* Clients: rewrite file upload support to resemble campaign upload code, and 
  detect charset encoding. Intended to fix Elastix bug #334.
* Agent Console,Campaign Out: remove HTML codes from French translations, as 
  they seep into CSV export output. Fix #2 for Elastix bug #325.
* Forms Designer: fix default selection of field type. Should prevent instances
  of Elastix bug #206.
* Calls per Hour: replaced implementation with newest implementation of Graphic
  Calls. Originally (deduced via diff) Graphic Calls was a fork of Calls per